# faceanonym

./: readme.textile
trunk/: CMakeLists.txt
trunk/src/: CMakeLists.txt
trunk/src/dataMan/: AnonimizedSequence.h  Anonymization.cpp  Anonymization.h  CMakeLists.txt  OpticalFlow.h  VideoSequence.cpp  VideoSequence.h  createTrainingSet.cpp  createTrainingSet.h  faceAnonymizer.cpp  faceAnonymizer.h  folderOrganize.cpp  folderOrganize.h  imageList.cpp  imageList.h  imageViewer.cpp  imageViewer.h  main.cpp  main.h  moc_qtanonimizationform.cpp  qtanonimizationform.cpp  qtanonimizationform.h  trainingData.h  ui_qtanonimizationform.h
